--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "d3-shape": "^1.2.0",
     "d3-timer": "^1.0.7",
     "lodash": "^4.17.4",
-    "prop-types": "^15.6.0"
+    "prop-types": "^15.6.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
   },
   "devDependencies": {
     "@storybook/react": "^3.2.13",
